# ids-drr-india-plugin

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: lint.yml
data/flood/: Himachal_pradesh_data.csv  uttar_pradesh_data.csv
data/heat/: Assam_data.csv  Odisha_data.csv  assam_data.csv  district_final_risk_score_deployment.csv  odisha_data.csv
data/heat/raster/Assam/: LST_ASSAM_2021_03.tif  LST_ASSAM_2021_07.tif  LST_ASSAM_2021_09.tif  LST_ASSAM_2021_11.tif  LST_ASSAM_2022_01.tif  LST_ASSAM_2022_02.tif  LST_ASSAM_2022_04.tif  LST_ASSAM_2022_06.tif  LST_ASSAM_2022_07.tif  LST_ASSAM_2022_09.tif  LST_ASSAM_2022_10.tif  LST_ASSAM_2022_11.tif  LST_ASSAM_2023_01.tif  LST_ASSAM_2023_02.tif  LST_ASSAM_2023_03.tif  LST_ASSAM_2023_04.tif  LST_ASSAM_2023_05.tif  LST_ASSAM_2023_09.tif  LST_ASSAM_2023_10.tif  LST_ASSAM_2023_11.tif  LST_ASSAM_2023_12.tif  (+18 more)
geography/: Assam_district.geojson  Assam_revenue_circles.geojson  Bihar_district.geojson  Bihar_subdistrict.geojson  HP_district.geojson  UP_district.geojson  UP_subdistrict.geojson  hp_tehsil_final.geojson  odisha_block.geojson  odisha_district.geojson
indicators/: Assam_indicators.csv  Bihar_indicators.csv  Himachal_Pradesh_indicators.csv  odisha_indicators.csv
indicators/flood/: Assam_indicators.csv  Uttar_Pradesh_indicators.csv  assam_indicators.csv  bihar_indicators.csv  himachal_pradesh_indicators.csv  odisha_indicators.csv  uttar_pradesh_indicators.csv
indicators/heat/: Assam_indicators.csv  Odisha_indicators.csv  odisha_indicators.csv
plugin/: apps.py  config.py  urls.py  views.py
(+96 files in other folders)
