[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ids-drr-plugin"
version = "0.1.0"
description = "Flood-risk PDF report generator for the IDS-DRR India deployment, packaged as a pluggable Django app."
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",
    "faker>=36",
    "httpx>=0.28",
    "pydantic>=2.10",
    "reportlab>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["plugin"]
