[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ids-drr-plugin"
version = "0.1.0"
description = "Flood-risk PDF report generator for the IDS-DRR India deployment, packaged as a pluggable Django app."
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",
    "faker>=36",
    "httpx>=0.28",
    "pydantic>=2.10",
    "reportlab>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["plugin"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
